--- a/example.cfg
+++ b/example.cfg
@@ -9,3 +9,6 @@ BOT_ROOT=~/bots
 
 # Recommended to use an absolute path if you wish to change this (Default is recommended)
 BOTSCRIPTS_ROOT=~/botScripts
+
+# Change this to the filename used for your github ssh key
+GITHUB_SSH_FILENAME=github
